--- a/.github/workflows/generate_settlements.yml
+++ b/.github/workflows/generate_settlements.yml
@@ -14,9 +14,12 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v6
 
+      - name: Install script dependencies
+        working-directory: .github/scripts/generate_civ_settlements
+        run: uv sync
+
       - name: Run settlements generation script
-        run: |
-          uv run .github/scripts/generate_civ_settlements/main.py
+        run: uv run .github/scripts/generate_civ_settlements/main.py
 
       - name: Get timestamp for branch name
         id: time
