--- a/.github/workflows/generate_settlements.yml
+++ b/.github/workflows/generate_settlements.yml
@@ -30,7 +30,8 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git checkout -b "$BRANCH"
-          git add .github/scripts/output.json
+          mv .github/scripts/CivMCSettlements.json CivMCSettlements.json
+          git add CivMCSettlements.json
           git commit -m "Add generated settlements (${{ env.branch_suffix }})"
           git push origin "$BRANCH"
 
