--- a/.github/workflows/generate_settlements.yml
+++ b/.github/workflows/generate_settlements.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Create and commit changes
         run: |
+          git status
           BRANCH="feature/settlements-${{ env.branch_suffix }}"
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
