--- a/.github/workflows/generate_settlements.yml
+++ b/.github/workflows/generate_settlements.yml
@@ -26,14 +26,13 @@ jobs:
 
       - name: Create and commit changes
         run: |
-          git status
           BRANCH="feature/settlements-${{ env.branch_suffix }}"
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git checkout -b "$BRANCH"
-          mv CivMCSettlements.json ../../CivMCSettlements.json
+          mv .github/scripts/generate_civ_settlements/CivMCSettlements.json ./CivMCSettlements.json
           git add CivMCSettlements.json
-          git commit -m "Add generated settlements (${{ env.branch_suffix }})"
+          git commit -m "Update generated settlements (${{ env.branch_suffix }})"
           git push origin "$BRANCH"
 
       - name: Create Pull Request
