Make the action open a pr to main

--- a/.github/workflows/generate_settlements.yml
+++ b/.github/workflows/generate_settlements.yml
@@ -38,14 +38,14 @@ jobs:
           git commit -m "Update generated settlements (${{ env.branch_suffix }})"
           git push -u origin "$BRANCH"
 
-      # - name: Create Pull Request
-      #   uses: peter-evans/create-pull-request@v6
-      #   with:
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     branch: feature/settlements-${{ env.branch_suffix }}
-      #     base: master
-      #     title: "Add generated settlements (${{ env.branch_suffix }})"
-      #     body: |
-      #       This PR adds the latest generated settlements output.
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: feature/settlements-${{ env.branch_suffix }}
+          base: master
+          title: "Add generated settlements (${{ env.branch_suffix }})"
+          body: |
+            This PR adds the latest generated settlements output.
 
-      #       - Generated at: `${{ env.branch_suffix }}`
+            - Generated at: `${{ env.branch_suffix }}`
