--- a/.github/workflows/generate_settlements.yml
+++ b/.github/workflows/generate_settlements.yml
@@ -1,4 +1,5 @@
-name: Generate Civilization Settlements
+name: Generate CivMC Settlements
+run-name: Generate CivMC Settlements  ${{ github.run_number }}-${{ github.event.head_commit.timestamp }}
 
 on:
   workflow_dispatch:
@@ -23,14 +24,17 @@ jobs:
           uv sync
           uv run main.py
 
+      - name: Get timestamp for PR Title
+        run: echo "timestamp=$(date +'%Y-%m-%dT%H_%M_%S')" >> $GITHUB_ENV
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: feature/settlements-
           branch-suffix: timestamp
-          commit-message: "Update generated settlements ($(date +'%Y-%m-%dT%H_%M_%S'))"
-          title: "Add generated settlements (${{ env.branch_suffix }})"
+          commit-message: "Update generated settlements"
+          title: "Add generated settlements (${{ env.timestamp }})"
           body: |
             This PR adds the latest generated settlements output.
 
