--- a/.github/workflows/generate_settlements.yml
+++ b/.github/workflows/generate_settlements.yml
@@ -1,5 +1,5 @@
 name: Generate CivMC Settlements
-run-name: Generate CivMC Settlements  ${{ github.run_number }}-${{ github.event.head_commit.timestamp }}
+run-name: Generate CivMC Settlements  ${{ github.run_number }}
 
 on:
   workflow_dispatch:
