--- a/.github/scripts/generate_civ_settlements/pyproject.toml
+++ b/.github/scripts/generate_civ_settlements/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "map-civ-net"
-version = "0.1.0"
-description = "Add your description here"
+name = "generate_civ_settlemets"
+version = "1.0.0"
+description = "Downloads data from https://docs.google.com/spreadsheets/d/1myQi-Y6-asM3UkoqUpDEAJSPvYiaOhx-oy7UthgweUk and generates a corresponding CivSettlements.json file"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
